Fixed Control-Voice-Animation overflow

--- a/src/pages/Home-Page/Control-Section/Control-Card/Control-Card.scss
+++ b/src/pages/Home-Page/Control-Section/Control-Card/Control-Card.scss
@@ -35,6 +35,7 @@
 }
 
 .control-card__media-wrap {
+  overflow-x: hidden;
   padding-left: 16px;
 }
 
