--- a/src/pages/Home-Page/Control-Section/Control-Voice-Animation/Control-Voice-Animation.scss
+++ b/src/pages/Home-Page/Control-Section/Control-Voice-Animation/Control-Voice-Animation.scss
@@ -5,7 +5,6 @@
   height: 100%;
   width: 100%;
   align-self: center;
-  overflow: hidden;
   &_on {
     .first-station {
       right: 10%;
